--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,21 +7,31 @@
 
 
 
-// Шрифты
+
 @font-face {
   font-family: "TTLakesNeue-Thin";
-  src: url("/src/fonts/TTLakes-Medium.ttf") format("opentype");
+  src: url("/src/fonts/TTLakes-Bold.ttf") format("opentype");
 }
 
 @font-face {
   font-family: "TTLakesNeue-DBold";
+  src: url("/src/fonts/TTLakes-Medium.ttf") format("opentype");
+}
+
+@font-face {
+  font-family: "TTLakes-Regular";
   src: url("/src/fonts/TTLakes-Regular.ttf") format("opentype");
 }
 
 body {
-  padding: 1rem;
   margin: 0;
   font-family: TTLakesNeue-Regular, sans-serif;
   background-color: $bgColor;
   color: $text;
+}
+.content{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0 auto;
 }
