--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,9 @@
 @use './components/menu.scss' as *;
 @use './components/services.scss' as *;
 @use './components/brands.scss' as *;
+@use './components/prices.scss' as *;
+@use './components/devices.scss' as *;
+@use './components/footer.scss' as *;
 @import "swiper/swiper-bundle.css";
 
 .menu {
