--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,9 @@
 @use 'main';
 @use 'components/brands';
 @use 'components/menu';
+@use 'components/devices';
+@use 'components/prices';
+@use 'components/footer';
 @import "swiper/swiper-bundle.css";
 
 
