--- a/src/scss/components/brands.scss
+++ b/src/scss/components/brands.scss
@@ -123,7 +123,7 @@
     .mySwiper {
       display: block;
       width: 100vw;
-      height: 120px;
+      min-height: 160px;
       padding: 10px 16px;
       box-sizing: border-box;
       margin-left: -20px;
@@ -164,7 +164,7 @@
   }
 
   // 💻 Планшеты
-  @media (min-width: 768px) and (max-width: 1100px) {
+  @media (min-width: 768px) and (max-width: 1119px) {
     &__row {
       flex-wrap: nowrap;
     }
