--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,24 +6,21 @@
 @use 'components/devices';
 @use 'components/prices';
 @use 'components/footer';
-@import "swiper/swiper-bundle.css";
-
-
-
+@import 'swiper/swiper-bundle.css';
 
 @font-face {
-  font-family: "TTLakesNeue-Thin";
-  src: url("/src/fonts/TTLakes-Bold.ttf") format("opentype");
+  font-family: 'TTLakesNeue-Thin';
+  src: url('/src/fonts/TTLakes-Bold.ttf') format('opentype');
 }
 
 @font-face {
-  font-family: "TTLakesNeue-DBold";
-  src: url("/src/fonts/TTLakes-Medium.ttf") format("opentype");
+  font-family: 'TTLakesNeue-DBold';
+  src: url('/src/fonts/TTLakes-Medium.ttf') format('opentype');
 }
 
 @font-face {
-  font-family: "TTLakes-Regular";
-  src: url("/src/fonts/TTLakes-Regular.ttf") format("opentype");
+  font-family: 'TTLakes-Regular';
+  src: url('/src/fonts/TTLakes-Regular.ttf') format('opentype');
 }
 
 body {
@@ -32,9 +29,15 @@ body {
   background-color: $bgColor;
   color: $text;
 }
-.content{
+.content {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
   margin: 0 auto;
+
+  @media (min-width: 320px) and (max-width: 767px) {
+    margin: 0;
+    width: 100vw;
+    max-width: 100vw;
+  }
 }
